# evl-filecoin-ffi

./: .gitignore  CMakeLists.txt  Makefile  README.md  bls_test.go  distributed.go  go.mod  go.sum  install-filcrypto  proofs.go  types.go  workflows.go
.circleci/: config.yml
include/: filcrypto.hpp
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/scripts/: build-release.sh
rust/src/bls/: api.rs
rust/src/proofs/: api.rs  helpers.rs  mod.rs  types.rs
rust/src/util/: api.rs
test/: CMakeLists.txt  bls_api.cpp  proofs_api.cpp
